@YELP_HELP_RULES@

# Module name
HELP_ID = file-roller

# List of figures to be included
HELP_MEDIA = \
	figures/file-roller-3-12.png \
	figures/file-roller-icon.png

# List of pages
HELP_FILES = \
	archive-create.page \
	archive-edit.page \
	archive-extract.page \
	archive-extract-advanced-options.page \
	archive-open.page \
	archive-view.page \
	index.page \
	introduction.page \
	legal.xml \
	keyboard-shortcuts.page \
	password-protection.page \
	supported-formats.page \
	test-integrity.page \
	troubleshooting-archive-open.page \
	troubleshooting-password.page

HELP_LINGUAS = ca cs da de el es fi fr gl hu id ja ko pl pt_BR ru sl sv te zh_CN

-include $(top_srcdir)/git.mk
